syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.github.saturn_xiv.palm.plugins.orchid.v1";
package palm.orchid.v1;

import "google/protobuf/empty.proto";

service WeChat {
  rpc Login(WeChatLoginRequest) returns (WeChatLoginResponse) {}
  rpc PhoneNumber(WeChatPhoneNumberRequest)
      returns (WeChatPhoneNumberResponse) {}
}

message WeChatLoginRequest {
  string app_id = 1;
  string code = 2;
}

message WeChatLoginResponse {
  optional string unionid = 1;
  string openid = 2;
}

message WeChatPhoneNumberRequest {
  string app_id = 1;
  string code = 2;
}

message WeChatPhoneNumberResponse {
  string phone_number = 1;
  string pure_phone_number = 2;
  string country_code = 3;
  uint64 water_mark = 4;
}

service Health {
  rpc Check(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}
